# tradejournal

./: .env.example  .gitignore  LICENSE  README.md  changelog.md  docker-compose.yml  opencode.json  package-lock.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: dependabot-notify.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260523_0001_init.py  20260523_0002_add_brokers.py  20260523_0003_broker_fee_config.py  20260523_0004_broker_fee_currency.py  20260525_0005_add_assets_holdings_portfolio_snapshots.py  20260525_0006_add_holding_dates.py  20260531_0007_add_ticker_id_to_trades.py
backend/app/: bootstrap.py  config.py  database.py  deps.py  i18n.py  main.py  models.py  scheduler.py  schemas.py  security.py
backend/app/api/: accounts.py  admin.py  assets.py  auth.py  brokers.py  calendar.py  dashboard.py  exchanges.py  holdings.py  notes.py  portfolio.py  snapshots.py  tickers.py  trades.py  uploads.py
backend/app/seeds/: directa_exchanges.py
backend/app/services/: calendar.py  pnl.py  portfolio.py  price_provider.py  snapshot.py
backend/app/tests/: test_pnl.py
backend/locale/en/LC_MESSAGES/: messages.po
backend/locale/it/LC_MESSAGES/: messages.po
docs/en/: settings.md  tickers.md
docs/it/: settings.md  tickers.md  trades.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ConfirmModal.tsx  ImageAnnotationEditor.tsx  Layout.tsx  MarketGantt.tsx  TagInput.tsx  TradeCreateModal.tsx  TradingViewChart.tsx  TradingViewTechnicalAnalysis.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: api.ts  (+2 more)
(+24 files in other folders)
