[project]
name = "tradejournal-backend"
version = "0.1.3"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "babel>=2.16.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
