[project]
name = "tradejournal-backend"
version = "0.1.5"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.3",
  "babel>=2.16.0",
  "uvicorn[standard]>=0.49.0",
  "sqlalchemy>=2.0.50",
  "psycopg[binary]>=3.3.4",
  "alembic>=1.18.4",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
