[project]
name = "tradejournal-backend"
version = "0.1.5"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.3",
  "babel>=2.18.0",
  "uvicorn[standard]>=0.49.0",
  "sqlalchemy>=2.0.50",
  "psycopg[binary]>=3.3.4",
  "alembic>=1.18.4",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.3.0",
  "python-multipart>=0.0.32",
  "apscheduler>=3.11.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3"
]

[tool.pytest.ini_options]
pythonpath = ["."]
